--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
           <a href="https://www.linkedin.com/in/betsi-loayza/" target="_blank"><span class="icon-linkedin-with-circle"></span></a>
         </div>
         <div class="tamano-icon cv">
-          <a href="cv%20.pdf" target="_blank"><img src="assets/icon/cv.png" alt="curriculum vitae"></a>
+          <a href="cv.pdf" target="_blank"><img src="assets/icon/cv.png" alt="curriculum vitae"></a>
         </div>
       </div>
     </div>
@@ -127,50 +127,46 @@
     </div>
     <div id="trabajos" class="trabajos">
         <div class="titulo ">
-          <h3>Laboratoria News</h3>
+          <h3>Mamá Moderna</h3>
           <hr>
         </div>
         <div class="contenido ">
           <div class="imagen ">
-            <img src="assets/img/labnews.png" alt="">
+            <img src="assets/img/madre.jpg" alt="">
           </div>
           <div class="descripcion ">
-            <p>La página Laboratoria News aspira a ser la primera opción y referencia
-             editorial para los peruanos.</p>
-            <p>Para la creación de esta página se usó HTML5, Sass, Gulp, Jquery
-              y un archivo Json de donde obtendremos las noticias a mostrar y
-              nombres de las fotos de la noticia.</p>
+            <p>Landing mamá moderna, muestra 4 tipos de electrodomésticos para poder realizar postres, se elige uno de ellos y aparece una sección donde se visualiza a detalle los tipos de productos.</p>
+            <p>Támbien se ve publicaciones de instagram de mamás que usaron los productos.</p>
+            <p>Para la creación de esta página se usó HTML5, css y Jquery.</p>
+            <p>Responsive.</p>
             <div class="botones">
-              <a href="https://newlaboratoria.herokuapp.com/" target="_blank"><button id="btn0" class="btn btn1 btn-default" type="button">Ver demo <span class="animated glyphicon glyphicon-circle-arrow-right"></span></button></a>
-              <a href="https://github.com/betsiana/Laboratoria-news" target="_blank"><button id="btn1" class="btn btn2 btn-default" type="button">Ver código <span class="animated glyphicon glyphicon-circle-arrow-right"></span></button></a>
+              <a href="https://betsiana.github.io/landing-mama-moderna/" target="_blank"><button id="btn0" class="btn btn1 btn-default" type="button">Ver demo <span class="animated glyphicon glyphicon-circle-arrow-right"></span></button></a>
+              <a href="https://github.com/betsiana/landing-mama-moderna" target="_blank"><button id="btn1" class="btn btn2 btn-default" type="button">Ver código <span class="animated glyphicon glyphicon-circle-arrow-right"></span></button></a>
             </div>
           </div>
         </div>
+    </div>
+    <div class="trabajos">
+      <div class="titulo ">
+        <h3>Mundialistas</h3>
+        <hr>
       </div>
-
-      <div class="trabajos">
-        <div class="titulo ">
-          <h3>Yape</h3>
-          <hr>
+      <div class="contenido ">
+        <div class="imagen column-media">
+          <img src="assets/img/mundialistas.jpg" alt="">
         </div>
-        <div class="contenido ">
-          <div class="imagen column-media">
-            <img src="assets/img/yape.png" alt="">
-          </div>
-          <div class="descripcion column-media">
-            <p>La app Yape del BCP te brinda la libertad de usar tu dinero como quieras,
-              ya que pagar con ella es más rápido.</p>
-            <p>Para la creación de la réplica de la app se usó HTML5, Jquery
-              y un Json en donde se envió data y de esta manera se obtuvo códigos
-              de confirmación.</p>
-
-            <div class="botones">
-              <button id="btn2" class="btn btn1 btn-default" type="button">Ver demo <span class="animated glyphicon glyphicon-circle-arrow-right"></span></button>
-              <button id="btn3" class="btn btn2 btn-default" type="button">Ver código <span class="animated glyphicon glyphicon-circle-arrow-right"></span></button>
-            </div>
+        <div class="descripcion column-media">
+          <p>Landing Mundialistas, se realizó por la fiebre del mundial, aqui puedes crear tu avatar y registralo.</p>
+          <p>Para la creación se usó HTML5, css, Jquery y php para poder hacer el registro de los datos y obtener el avatar generado.</p>
+          <p>Responsive.</p>
+          <p>Apoyo de Backend.</p>
+          <div class="botones">
+            <a href="https://betsiana.github.io/landing-mundial/" target="_blank"><button id="btn2" class="btn btn1 btn-default" type="button">Ver demo <span class="animated glyphicon glyphicon-circle-arrow-right"></span></button></a>
+            <a href="https://github.com/betsiana/landing-mundial" target="_blank"><button id="btn3" class="btn btn2 btn-default" type="button">Ver código <span class="animated glyphicon glyphicon-circle-arrow-right"></span></button></a>
           </div>
         </div>
       </div>
+    </div>
     <!-- Trabajos realizados -->
     <div class="trabajos">
       <div class="titulo ">
@@ -186,9 +182,10 @@
             actual del usuario y le permite ingresar un punto de salida y de llegada para trazar la ruta.</p>
           <p>Para la creación de esta página se usó HTML5, CSS3, Jquery
             y el API de GoogleMaps de donde obtendremos el autocompletado y trazo de ruta.</p>
+          <p>Responsinve.</p>
           <div class="botones">
-            <a href="https://stephhiyagon.github.io/LabCar-CodeReview/" target="_blank"><button id="btn4" class="btn btn1 btn-default" type="button">Ver demo <span class="animated glyphicon glyphicon-circle-arrow-right"></span></button></a>
-            <a href="https://github.com/StephHiyagon/LabCar-CodeReview" target="_blank"><button id="btn5" class="btn btn2 btn-default" type="button">Ver código <span class="animated glyphicon glyphicon-circle-arrow-right"></span></button></a>
+            <a href="https://betsiana.github.io/LabCar-taxi/" target="_blank"><button id="btn4" class="btn btn1 btn-default" type="button">Ver demo <span class="animated glyphicon glyphicon-circle-arrow-right"></span></button></a>
+            <a href="https://github.com/betsiana/LabCar-taxi" target="_blank"><button id="btn5" class="btn btn2 btn-default" type="button">Ver código <span class="animated glyphicon glyphicon-circle-arrow-right"></span></button></a>
           </div>
         </div>
       </div>
@@ -196,25 +193,26 @@
 
     <div class="trabajos">
       <div class="titulo center">
-        <h3>Pinterest</h3>
+        <h3>Predator</h3>
         <hr>
       </div>
       <div class="contenido ">
         <div class="imagen column-media">
-          <img src="assets/img/pinterest.png" alt="">
+          <img src="assets/img/predator.jpg" alt="">
         </div>
         <div class="descripcion column-media">
-          <p>La página de Pinterest es una plataforma para compartir imágenes que
-            permite a los usuarios crear y administrar tableros personales.</p>
-          <p>Para la creación de esta réplica se uso HTML5, Sass, Jquery, Gulp
-            y el API de Pinterest donde obtendremos las imágenes y datos necesarios.</p>
+          <p>Landing Predator, muestra los nuevos equipos para gamers.</p>
+          <p>Al realizar scroll se puede visualizar como cada equipo hace su ingreso en la pantalla.</p>
+          <p>Para la creación de esta réplica se uso HTML5, css, Jquery y plugin Jarallax.</p>
+          <p>Responsive.</p>
           <div class="botones">
-            <button id="btn6" class="btn btn1 btn-default" type="button">Ver demo <span class="animated glyphicon glyphicon-circle-arrow-right"></span></button>
-            <button id="btn7" class="btn btn2 btn-default" type="button">Ver código <span class="animated glyphicon glyphicon-circle-arrow-right"></span></button>
+            <a href="https://betsiana.github.io/landing-predator/" target="_blank"></a><button id="btn6" class="btn btn1 btn-default" type="button">Ver demo <span class="animated glyphicon glyphicon-circle-arrow-right"></span></button></a>
+            <a href="https://github.com/betsiana/landing-predator" target="_blank"></a><button id="btn7" class="btn btn2 btn-default" type="button">Ver código <span class="animated glyphicon glyphicon-circle-arrow-right"></span></button></a>
           </div>
         </div>
       </div>
     </div>
+
     <!-- Informacion de contacto-->
       <div id="contactame" class="contactame flex">
         <div class="info-contacto flex">
