--- a/index.html
+++ b/index.html
@@ -206,8 +206,8 @@
           <p>Para la creación de esta réplica se uso HTML5, css, Jquery y plugin Jarallax.</p>
           <p>Responsive.</p>
           <div class="botones">
-            <a href="https://betsiana.github.io/landing-predator/" target="_blank"></a><button id="btn6" class="btn btn1 btn-default" type="button">Ver demo <span class="animated glyphicon glyphicon-circle-arrow-right"></span></button></a>
-            <a href="https://github.com/betsiana/landing-predator" target="_blank"></a><button id="btn7" class="btn btn2 btn-default" type="button">Ver código <span class="animated glyphicon glyphicon-circle-arrow-right"></span></button></a>
+            <a href="https://betsiana.github.io/landing-predator/" target="_blank"><button id="btn6" class="btn btn1 btn-default" type="button">Ver demo <span class="animated glyphicon glyphicon-circle-arrow-right"></span></button></a>
+            <a href="https://github.com/betsiana/landing-predator" target="_blank"><button id="btn7" class="btn btn2 btn-default" type="button">Ver código <span class="animated glyphicon glyphicon-circle-arrow-right"></span></button></a>
           </div>
         </div>
       </div>
